--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 @font-face {
 	font-family: 'Minecraft';
-	src: url('Minecraft.ttf') format('truetype');
+	src: url('../css/Minecraft.ttf') format('truetype');
   }
 html {
 	height: 100%;
